Updated controller tests and remove unnecessary imports